--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -130,6 +130,7 @@ a.dropdown-toggle.nav-link:hover {
     width: 100%;
     height: 100%;
     border-radius: 5px;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .movie_card_inset:hover {
