--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -248,3 +248,7 @@ a.dropdown-toggle.nav-link:hover {
         transform: rotate(360deg);
     }
 }
+.leaflet-container {
+  width: 100%;
+  height: 100vh;
+}
