--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,12 +19,18 @@ input.form-control.auth:focus{
 }
 .nav_link_color {
     color: #adb5bd !important;
-    font-size: 0.85rem !important;
+    padding:3px 8px !important;
+    margin: 0 5px !important;
+    font-size: 0.85rem;
 }
 
 .nav_link_color:hover {
-    background-color: initial !important;
+    background-color: #313636 !important;
+
+    border-radius: 3px !important;
+    /*margin: 0 5px !important;*/
     color: whitesmoke !important;
+
 }
 
 .register_btn, .login_btn {
